# MemoryManager

./: .gitignore  CMakeLists.txt  LICENSE
libs/catch2/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Api/: MemoryStrategy.h
src/MemoryManager/: ManagedPtr.cpp  ManagedPtr.hpp  MemoryManager.hpp
src/Tests/: Benchmarks.h  CombinedTest.hpp  CopyTests.hpp  IntegerTests.hpp  ObjectTests.hpp  TestClass.hpp  TestMemoryStrategy.hpp  Utils.hpp
